<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity2">

    <ImageView android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:src="@drawable/tempat"
               app:layout_constraintTop_toTopOf="parent"
               android:contentDescription="@string/place"
                android:id="@+id/foto"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/store"
              android:layout_marginStart="30dp"
              android:layout_marginTop="30dp"
              app:layout_constraintTop_toBottomOf="@+id/foto"
              app:layout_constraintLeft_toLeftOf="parent"
              android:textAppearance="@style/font"
              android:id="@+id/store2"
    />

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginEnd="20dp"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintBaseline_toBaselineOf="@id/store2"
              android:id="@+id/place"
              android:textAppearance="@style/font"
    />

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/location"
              android:id="@+id/location"
              android:layout_marginTop="20dp"
              android:layout_marginStart="30dp"
              app:layout_constraintTop_toBottomOf="@id/store2"
              app:layout_constraintLeft_toLeftOf="parent"
              android:textAppearance="@style/font"
    />

    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               android:layout_marginStart="2dp"
               android:src="@drawable/ic_location"
               android:layout_marginEnd="20dp"
               app:layout_constraintStart_toEndOf="@id/findmap"
               app:layout_constraintTop_toBottomOf="@id/place"
               android:id="@+id/fg"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/findmap"
              android:layout_marginTop="20dp"
              android:layout_marginEnd="40dp"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toBottomOf="@id/place"
              android:textAppearance="@style/font"
              android:id="@+id/findmap"
    />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seeMenu"
            android:id="@+id/button2"
            app:backgroundTint="@null"
            android:background="@drawable/button_border"
            android:layout_marginTop="30dp"
            android:layout_marginStart="58dp"
            android:layout_marginEnd="40dp"
            style="@style/button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location"
            app:layout_constraintRight_toRightOf="parent"/>





</androidx.constraintlayout.widget.ConstraintLayout>