<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity5">

    <TextView
            android:id="@+id/deta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deta"
            android:textAppearance="@style/font"
            android:gravity="top"
            android:layout_marginTop="58dp"
            android:layout_marginStart="58dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="MissingConstraints"/>

    <TextView
            android:id="@+id/nama_d"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:textAppearance="@style/font_list"
            app:layout_constraintLeft_toLeftOf="@id/deta"
            app:layout_constraintTop_toBottomOf="@id/deta"/>

    <TextView
            android:id="@+id/cabang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAppearance="@style/font_list"
            app:layout_constraintLeft_toLeftOf="@id/deta"
            app:layout_constraintTop_toBottomOf="@id/nama_d"
    />

    <TextView
            android:id="@+id/pesan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAppearance="@style/font_list"
            app:layout_constraintLeft_toLeftOf="@id/deta"
            app:layout_constraintTop_toBottomOf="@id/cabang"
    />

    <TextView
            android:id="@+id/pengiriman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kirim"
            android:textAppearance="@style/font"
            android:gravity="top"
            android:layout_marginTop="30dp"
            android:layout_marginStart="58dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pesan"
            tools:ignore="MissingConstraints"/>

    <CheckBox android:id="@+id/ambil"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/ambil"
              app:layout_constraintLeft_toLeftOf="@id/pengiriman"
              app:layout_constraintTop_toBottomOf="@id/pengiriman"/>

    <CheckBox android:id="@+id/delivery"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/deli"
              app:layout_constraintLeft_toLeftOf="@id/pengiriman"
              app:layout_constraintTop_toBottomOf="@id/ambil"/>

    <Button

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="58dp"
            android:layout_marginEnd="40dp"
            android:text="@string/done"
            android:id="@+id/button5"
            app:backgroundTint="@null"
            android:background="@drawable/button_border"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delivery"
            app:layout_constraintRight_toRightOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>