<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView
            android:id="@+id/gtoko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/toko"
            app:layout_constraintBottom_toTopOf="@+id/store"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="58dp"/>

    <TextView
            android:id="@+id/store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store"
            android:textAppearance="@style/font"
            android:gravity="top"
            android:layout_marginTop="58dp"
            android:layout_marginStart="58dp"
            app:layout_constraintTop_toBottomOf="@+id/gtoko"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="MissingConstraints"/>

    <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/spinn"
            android:padding="10dp"
            android:layout_marginStart="58dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/store"/>

    <TextView
            android:id="@+id/your_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="58dp"
            android:text="@string/yourname"
            android:textAppearance="@style/font"
            android:gravity="top"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            app:layout_constraintLeft_toLeftOf="parent"
    />

    <EditText
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entername"
            android:inputType="textPersonName"
            android:layout_marginStart="58dp"
            android:layout_marginEnd="28dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/your_name"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/button"
            app:backgroundTint="@null"
            android:background="@drawable/button_border"
            android:layout_marginTop="30dp"
            android:layout_marginStart="58dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_text"
            app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>